--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-a:hover
-{
-	font-family: "arial";
-}
-
 p, h1, h2, h3, h4, h5, h6
 {
 	font-family: "arial";
@@ -12,7 +7,7 @@ p, h1, h2, h3, h4, h5, h6
 body
 {
 	margin: 1px 1px 1px 1px;
-	background-image: url("./imgs/bgimg.jpg");
+	background-image: url("assign1/imgs/bgimg.jpg");
 	background-repeat: repeat;
 }
 
@@ -21,33 +16,47 @@ hr
 	color: green;
 }
 
+ul
+{
+	list-style-type: square;
+	list-style-position: inside;
+}
+
+a:hover
+{
+	font-family: "arial";
+	color: #126eaf;
+	text-shadow: 2px 2px 8px black;
+}
+
+a:link, a:visited, a:active
+{
+	color: blue;
+}
+
 .center
 {
 	margin-left: 20%;
 	width: 60%;
 }
-.center a:hover
-{
-	text-shadow: 2px 2px 8px black;
-}
 .left
 {
+	margin-top: 2%;
 	margin-left: 5%;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	line-height: 25px;
 	float: left;
 	position: absolute;
+	
+	border-top: 3px dotted #e5e5e5;
+	border-bottom: 3px dotted #e5e5e5;
+	box-shadow: inset 0 -1px 0 0 #e5e5e5, inset 0 1px 0 0 #e5e5e5, 0 1px 0 0 #e5e5e5, 0 -1px 0 0 #e5e5e5;
 }
 .left a
 {
 	font-weight: bold;
 	text-transform: uppercase;
-}
-.left a:link, a:visited, a:active
-{
-	color: blue;
-}
-.left a:hover
-{
-	color: #3ca2aa;
 }
 .sub-left
 {
