--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ p, h1, h2, h3, h4, h5, h6
 
 body
 {
-	margin: 1px 1px 1px 1px;
+	margin: 1px;
 	background-image: url("assign1/imgs/bgimg.jpg");
 	background-repeat: repeat;
 }
@@ -36,17 +36,17 @@ a:link, a:visited, a:active
 
 .center
 {
+	position: absolute;
 	margin-left: 20%;
 	width: 60%;
 }
 .left
 {
-	margin-top: 2%;
-	margin-left: 5%;
+	margin-top: 20px;
+	margin-left: 100px;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	line-height: 25px;
-	float: left;
 	position: absolute;
 	
 	border-top: 3px dotted #e5e5e5;
@@ -75,13 +75,4 @@ a:link, a:visited, a:active
 	width: 171.35px;
 	height: 316.4px;
 	border-radius: 150px;
-}
-.assign2Form tr
-{
-	padding-top: 5px;
-	padding-bottom: 5px;
-}
-.tab
-{
-	margin-left: 8px;
 }
