--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body
+{
+	overflow: hidden;
+}
 
 hr
 {
@@ -6,8 +10,7 @@ hr
 
 .self
 {
+	margin-top: 10px;
 	box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-	width: 50px;
-	height: 100px;
-	border-radius: 150px;
+	border-radius: 15px;
 }
